--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "agent",
   "version": "1.0.0",
-  "description": "代理商系统",
-  "author": "王国顺 <wangguoshun@haomai-mrm.com>",
+  "description": "通信后台管理系统",
+  "author": "ansteel <ansteel@ansteel.com.cn>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
